# SIMPLE

./: .gitignore  2remove_from_release2.5.txt  404.html  CLAUDE.md  CMakeCache.txt  CMakeLists.txt  DESCRIPTION  Makefile  Makefile_macros  README  README.md  README.org  README.txt  README_cmake  compile.sh  compileSIMPLE.pl  compile_afm.sh  compile_clean.sh  compile_coarrays.sh  compile_conda.sh  compile_cpack.sh  compile_csbclust.sh  compile_debug.sh  compile_gfortran.sh  compile_gpu.sh  compile_gpu_debug.sh  compile_gui.sh  compile_intel.sh  compile_nvhpc.sh  compile_old_gui.sh  compile_test.sh  compile_windows.sh  compile_with_all_gccs.sh  index.html  installation.html  makemake  memory.html  mkdocs.yml  procedures_ge5_dummy_args_per_file.tsv  simple_distr_config.env  (+4 more)
cmake/PostInstall/: CMakeLists.txt  PostInstallMessage.cmake
doc/SimpleTutorials2017/: CMakeLists.txt  Tutorials.aux  Tutorials.bbl  Tutorials.blg  Tutorials.html  Tutorials.out  Tutorials.tex  tutorial.html
gui/: .gitignore  CMakeLists.txt  COMPILE  CREATING_TUTORIALS_README  README  TODO  package.json  simple  simple_gui.cpp  sync_run.sh  sync_script.sh
gui.nbak/: CMakeLists.txt
gui.nbak/ext/: CMakeLists.txt  Makefile  cmake_install.cmake
gui.nbak/src/: CMakeLists.txt  Makefile  cmake_install.cmake  simple_gui.cpp
gui.nbak/src2/: JSON.h  simple_gui_logging.h
gui.nbak/www/: ini3dview.html
gui/core/: simple.js  simple_multiuser.js
gui/etc/: simple_gui.conf
gui/ext/: CMakeLists.txt
gui/precompiled/: simple_mac.sh
gui/src/: .browsercache.json  CMakeLists.txt  COMPILE  lodepng.cpp  simple.cpp  simple_gui.cpp  simple_gui_filesystem.h  simple_gui_http.h  simple_gui_project.h  simple_gui_unidocdata.h  simple_ws.cpp
gui/src2/: simple_gui_environment.h  simple_gui_filesystem.h  simple_gui_mrc.h  simple_gui_sqlite.h  simple_gui_webserver.h
gui/www/: .htpasswd  2dview.html  3dview.html  3dviewold.html  CMakeLists.txt  ctffindview.html  error.html  fileselector.css  fileviewer.css  header.html  history.css  index.html  index.js  java.html  job.css  job.html  jobselector.html  logfileview.html  newjob.css  newjob.html  newproject.html  old.js  particleview.html  pipelineview.css  pipelineview.html  projectmanager.html  simple.css  simple.js  unblurview.html
nice/: CMakeLists.txt  manage.py  nice_local.py.in  start.py  substitute_nice_src.cmake
nice/artwork/: simple_stream.xcf  simple_stream_2.xcf  simple_stream_min.xcf  single_logo.xcf
nice/example_proxy/: apache_virtualhost_ssl.conf.in
nice/example_systemd/: simple_nice.service.in
nice/example_templates/: lsf.sh.in  slurm.sh  slurm.sh.in
nice/nice_lite/: admin.py  api.py  apps.py  helpers.py  models.py  tailwind.sh  urls.py  views.py  views_classic.py  views_stream.py
nice/nice_lite_dev/: api.py  urls.py  views.py  views_classic.py  views_stream.py
nice/nice_project/: asgi.py  settings.py  settings.py.in  settings_local.py  settings_production.py.in  urls.py  wsgi.py  wsgi.py.in
nice/test_display/: nice_test_display.py.in  test_display.sql.in
production/: CMakeLists.txt  Makefile_target  compile_production_QCD.csh  production.inf  simple_coarray_exec.f90  simple_exec.f90  simple_persistent_worker.f90  simple_private_exec.f90  simple_private_exec_driver.f90  simple_stream.f90  simple_test_exec.f90  simple_worker.f90  single_exec.f90
production/quant_exec/: quant_exec.f90
production/simple/: CMakeLists.txt  Michael_Please_Remove_Your_Rubbish
production/simple_exec/: simple_exec.f90
production/simple_private_exec/: simple_private_exec.f90
production/simple_stream/: simple_stream.f90
production/simple_tests/: 2dos.txt  copy_ignore_template.pl  delete_junk.pl  make_binaries.pl
production/single_exec/: single_exec.f90
production/tests/: CMakeLists.txt  simple_ft_expanded_tester.f90  simple_test_1jyx_abinitio.f90  simple_test_AFM.f90  simple_test_AFM_IO.f90  simple_test_angres.f90  simple_test_atomfit.f90  simple_test_binoris.f90  simple_test_binoris_io.f90  simple_test_block_tree.f90  simple_test_block_tree2D.f90  simple_test_block_tree_io.f90  simple_test_bounds_from_mask3D.f90  simple_test_cavg_compatibility.f90  simple_test_cavg_quality_relations.f90  simple_test_class_sample.f90  simple_test_cluster2D_rejection.f90  simple_test_coarrays.f90  simple_test_corrs2weights.f90  simple_test_ctf.f90  simple_test_discrete_stack_io.f90  simple_test_eigh.f90  simple_test_eo_diff.f90  simple_test_eul_prob_tab2D_io.f90  simple_test_eval_polarftcc.f90  simple_test_extr_frac.f90  simple_test_extract_dead_pixels.f90  simple_test_flex_diffmap_graph.f90  simple_test_flex_projected_latent_model.f90  simple_test_forked_process.f90  simple_test_frame_tile_diffmap_denoise.f90  simple_test_ft_expanded.f90  simple_test_gencorrs_fft.f90  simple_test_gui_assembler.f90  (+61 more)
scripts/: CMakeLists.txt  SyncWMASSIVE.pl  SyncWOFFICE.pl  Template_Centos6_CPU_simple_user_input.pm  Template_FEDORA_21x64_CPU_simple_user_input.pm  Template_MASSIVE_CPU_simple_user_input.pm  Template_MacOSXFINK_10.11.4x64_CPU_simple_user_input.pm  Template_MacOSXMacPorts_10.11.4x64_CPU_simple_user_input.pm  Template_MacOSX_10.9.5x64_CPU_simple_user_input.pm  Template_Mint_17.1x64_CPU_simple_user_input.pm  Template_OXFORD_CPU_simple_user_input.pm  Template_SUSE_13.2x64_CPU_simple_user_input.pm  Template_Ubuntu_14.10x64_CPU_simple_user_input.pm  Template_Ubuntu_15.10x64_GPU_simple_user_input.pm  Template_Ubuntu_16.XXx64_CPU_simple_user_input.pm  add2.bashrc.sharedtemplate  add2.bashrc.template  add2.tcshrc.sharedtemplate  add2.tcshrc.template  align_from_chimera.py  avg_sym_stats.py  calc_avg_exec_time.pl  check_add_ui.py  check_descr.py  check_dims_movs.pl  check_dims_movs.py  chimera_fitmap.py  cleanSIMPLEout.pl  clean_simple_uses.pl  compile_simple_on_massive.sh  convert_frealign2simple.pl  convert_helical2box.pl  convert_relion2simple.pl  convert_simple2relion.py  cp_early_stream_UT_results.pl  cp_filetab.pl  create_simulData.csh  delete_unused_variables.pl  distr_simple.pl  dm42mrc.pl  (+81 more)
src/: CMakeLists.txt  Makefile_target  src.inf
tests/: CMakeLists.txt
(+5243 files in other folders)
